--- a/overlays/SystemUI/res/values/dimen.xml
+++ b/overlays/SystemUI/res/values/dimen.xml
@@ -17,4 +17,8 @@
 
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1460px</dimen>
+    
+    <!-- Microns/ums (1000 um = 1mm) per pixel for the given device. If unspecified, UI that
+        relies on this value will not be sized correctly. -->
+    <item name="pixel_pitch" format="float" type="dimen">48.7</item>
 </resources>
