--- a/overlays/Frameworks/res/values/config.xml
+++ b/overlays/Frameworks/res/values/config.xml
@@ -377,8 +377,16 @@
          For example, no higher refresh rate if
              display brightness <= disp0 && ambient brightness <= amb0
              || display brightness <= disp1 && ambient brightness <= amb1 -->
-    <integer-array name="config_brightnessThresholdsOfPeakRefreshRate" />
-    <integer-array name="config_ambientThresholdsOfPeakRefreshRate" />
+    <integer-array name="config_brightnessThresholdsOfPeakRefreshRate">
+                 <!-- System brightness for 10 nits: round((10-2)/(1000-2)*(255-1)+1) = 3 -->
+        <item>10</item> <!-- 33% UI brightness -->
+                 <!-- System brightness for 15 nits: round((15-2)/(1000-2)*(255-1)+1) = 4 -->
+        <item>14</item> <!-- 40% UI brightness -->
+    </integer-array>
+    <integer-array name="config_ambientThresholdsOfPeakRefreshRate">
+        <item>-1</item>
+        <item>20</item>
+    </integer-array>
 
     <!-- The bounding path of the cutout region of the main built-in display.
          Must either be empty if there is no cutout region, or a string that is parsable by
